--- a/index.html
+++ b/index.html
@@ -1,41 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tentang Wayang</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!--css-->
-    <link rel="stylesheet" href="style.css">
-
-    <!--my font | Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  </head>
-
-  <body class="bg-secondary">
-    <div class="container mb-5 mt-5">
-        <div class="card text-center">
-            <div class="card-header fw-bold">MARI MENGENAL TENTANG WAYANG DAN SEJARAHNYA</div>
-            <div class="card-body px-4 py-4">
-
-              <img src="yuu.jpg" height="mb-5" width="50%" class="rounded-circle w-50 border border-5 border border-dark-subtle">
-              <h3 class="card-title fw-bold">CHAIRUL IMAN</h3>
-              <h4 class="card-title fw-bold">23.230.0091</h4>
-              <h4 class="card-title fw-bold">STMIK Widya Pratama Pekalongan</h4>
-              <br><br>
-              <p class="card-text">Lihat Daftar Wayang Di Bawah Ini atau Pencet Tombol Sebelah kanan</p>
-
-              <!-- Navbar Tentang Wayang -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tentang Wayang</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--css-->
+  <link rel="stylesheet" href="style.css">
+  <!--my font | Awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body class="bg-secondary">
+  <div class="container mb-5 mt-5">
+    <div class="card text-center">
+      <div class="card-header fw-bold">MARI MENGENAL TENTANG WAYANG DAN SEJARAHNYA</div>
+      <div class="card-body px-4 py-4">
+        <img src="yuu.jpg" class="rounded-circle border border-dark-subtle img-fluid mx-auto d-block mb-5" style="max-width: 50%;">
+        <h3 class="card-title fw-bold">CHAIRUL IMAN</h3>
+        <h4 class="card-title fw-bold">23.230.0091</h4>
+        <h4 class="card-title fw-bold">STMIK Widya Pratama Pekalongan</h4>
+        <br><br>
+        <p class="card-text">Lihat Daftar Wayang Di Bawah Ini atau Pencet Tombol Sebelah kanan</p>
+        <!-- Navbar Tentang Wayang -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
           <a class="nav-link" href="#arjuna">ARJUNA</a>
           <a class="nav-link" href="#bima">BIMA</a>
           <a class="nav-link" href="#nakulasadewa">NAKULA & Sadewa</a>
